Bug 828286 - SVG stylesheet not enabled for SVG loaded as data and then imported with importNode. r=dholbert